Cleanup tutorial tests

--- a/TuttiExample/Base.lproj/Localizable.strings
+++ b/TuttiExample/Base.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 
 "tutorial_standard_1_title" = "Manual page count";
 "tutorial_standard_1_text" = "If you add more pages in Localizable.strings, you must manually adjust the page count when creating the tutorial.";
+"tutorial_standard_1_close" = "X";
+"tutorial_standard_1_previous" = "<";
+"tutorial_standard_1_next" = ">";
 
 "tutorial_standard_2_title" = "That's it";
 "tutorial_standard_2_text" = "You have now seen all pages in this tutorial. Press the top right x to close the tutorial.";
