--- a/TuttiExample/Base.lproj/Localizable.strings
+++ b/TuttiExample/Base.lproj/Localizable.strings
@@ -7,23 +7,18 @@
 */
 
 "tutorial_standard_0_title" = "Standard tutorial";
-"tutorial_standard_0_text" = "This is a standard tutorial. It requires manual setup, but will translate components using localized strings.";
-
-"tutorial_standard_1_title" = "Manual page count";
-"tutorial_standard_1_text" = "If you add more pages in Localizable.strings, you must manually adjust the page count when creating the tutorial.";
-
+"tutorial_standard_0_text" = "Standard tutorials require manual setup, but translates components using localized strings.\n\nYou can navigate through this tutorial by swiping left/right or by using the next/previous buttons.";
+"tutorial_standard_1_title" = "Manual setup";
+"tutorial_standard_1_text" = "Standard tutorials must be given a page count when they are created. Make sure to add localized strings for each page in the tutorial.\n\nBy the way, did you notice that the buttons and page indicator changed as you switched page?";
 "tutorial_standard_2_title" = "That's it";
-"tutorial_standard_2_text" = "You have now seen all pages in this tutorial. Press the top right x to close the tutorial.";
-
+"tutorial_standard_2_text" = "You have now seen all pages in this tutorial. Try adding more pages in the demo app to see how this tutorial changes. Remember to add new title images and translations.\n\nTap the close button to close this tutorial. It can not be shown again.";
 
 "tutorial_localized_0_title" = "Localized tutorial";
-"tutorial_localized_0_text" = "This is a localized tutorial. It will automatically configure itself using available localized keys.";
-
+"tutorial_localized_0_text" = "Localized tutorials resolve their own page count by looking at the available localized strings.\n\nYou can navigate through this tutorial by swiping left/right or by using the next/previous buttons.";
 "tutorial_localized_1_title" = "Automatic page count";
-"tutorial_localized_1_text" = "If you add more pages in Localizable.strings, the tutorial will automatically set its page count to the correct value.";
-
+"tutorial_localized_1_text" = "If you add or remove pages in Localizable.strings, this tutorial will automatically adjust its page count to the available translations.\n\nBy the way, did you notice that the buttons and page indicator changed as you switched page?";
 "tutorial_localized_2_title" = "That's it";
-"tutorial_localized_2_text" = "You have now seen all pages in this tutorial. Press the top right x to close the tutorial.";
+"tutorial_localized_2_text" = "You have now seen all pages in this tutorial. Try adding more pages in the demo app to see how this tutorial changes. Remember to add new title images and translations.\n\nTap the close button to close this tutorial. It can not be shown again.";
 
 
 /* Test data */
