--- a/TuttiExample/Base.lproj/Localizable.strings
+++ b/TuttiExample/Base.lproj/Localizable.strings
@@ -6,19 +6,26 @@
   Copyright © 2017 Daniel Saidi. All rights reserved.
 */
 
-"tutorial_standard_0_title" = "Standard tutorial";
+"tutorial_standard_0_title" = "Standard tutorials";
 "tutorial_standard_0_text" = "Standard tutorials require manual setup, but translates components using localized strings.\n\nYou can navigate through this tutorial by swiping left/right or by using the next/previous buttons.";
 "tutorial_standard_1_title" = "Manual setup";
 "tutorial_standard_1_text" = "Standard tutorials must be given a page count when they are created. Make sure to add localized strings for each page in the tutorial.\n\nBy the way, did you notice that the buttons and page indicator changed as you switched page?";
 "tutorial_standard_2_title" = "That's it";
 "tutorial_standard_2_text" = "You have now seen all pages in this tutorial. Try adding more pages in the demo app to see how this tutorial changes. Remember to add new title images and translations.\n\nTap the close button to close this tutorial. It can not be shown again.";
 
-"tutorial_localized_0_title" = "Localized tutorial";
+"tutorial_localized_0_title" = "Localized tutorials";
 "tutorial_localized_0_text" = "Localized tutorials resolve their own page count by looking at the available localized strings.\n\nYou can navigate through this tutorial by swiping left/right or by using the next/previous buttons.";
 "tutorial_localized_1_title" = "Automatic page count";
 "tutorial_localized_1_text" = "If you add or remove pages in Localizable.strings, this tutorial will automatically adjust its page count to the available translations.\n\nBy the way, did you notice that the buttons and page indicator changed as you switched page?";
 "tutorial_localized_2_title" = "That's it";
 "tutorial_localized_2_text" = "You have now seen all pages in this tutorial. Try adding more pages in the demo app to see how this tutorial changes. Remember to add new title images and translations.\n\nTap the close button to close this tutorial. It can not be shown again.";
+
+"tutorial_deferred_0_title" = "Deferred tutorials";
+"tutorial_deferred_0_text" = "Deferred tutorials require a custom number of presentation attempts before they are actually presented.\n\nYou can navigate through this tutorial by swiping left/right or by using the next/previous buttons.";
+"tutorial_deferred_1_title" = "Why use it";
+"tutorial_deferred_1_text" = "Deferred tutorials are good for when you want a tutorial to be displayed after a certain number of attempts, e.g. when you want to show a tutorial the nth time a user starts the app.";
+"tutorial_deferred_2_title" = "That's it";
+"tutorial_deferred_2_text" = "You have now seen all pages in this tutorial. Try adding more pages in the demo app to see how this tutorial changes. Remember to add new title images and translations.\n\nTap the close button to close this tutorial. It can not be shown again.";
 
 
 /* Test data */
