--- a/TuttiDemo/en.lproj/Localizable.strings
+++ b/TuttiDemo/en.lproj/Localizable.strings
@@ -12,3 +12,10 @@
 "tutorial.localized.1.text" = "If you add or remove pages in Localizable.strings, this tutorial will automatically adjust its page count to the available translations.\n\nBy the way, did you notice that the buttons and page indicator changed as you switched page?";
 "tutorial.localized.2.title" = "That's it";
 "tutorial.localized.2.text" = "You have now seen all pages in this tutorial. Try adding more pages in the demo app to see how this tutorial changes. Remember to add new title images and translations.\n\nTap the close button to close this tutorial. It can not be shown again.";
+
+"tutorial.correct-behavior.0.title" = "Incorrect behavior";
+"tutorial.correct-behavior.0.text" = "You can use a CorrectBehaviorOnboarding to present hints and tutorials when a user behaves incorrectly.";
+"tutorial.correct-behavior.1.title" = "Use case";
+"tutorial.correct-behavior.1.text" = "This type of onboarding is good when you want to educate your users or instruct them what you want them to do.";
+"tutorial.correct-behavior.2.title" = "Example";
+"tutorial.correct-behavior.2.text" = "For instance, a child that drags a puzzle game piece to the wrong hole multiple times could get some visual help.";
