--- a/Demo/Demo/en.lproj/Localizable.strings
+++ b/Demo/Demo/en.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 /* 
   Localizable.strings
-  Tutti
+  OnboardingKit
 
   Created by Daniel Saidi on 2021-09-23.
   Copyright © 2021 Daniel Saidi. All rights reserved.
